# pinephone-rs-display-prototype

./: Cargo.toml  README.md
src/: config.rs  events.rs  main.rs  view_id_gen.rs  viewable.rs
src/keypad/: button.rs  key.rs  mod.rs
